--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=user-service
 spring.config.import=optional:configserver:http://localhost:8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/user-service
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.security.oauth2.client.registration.facebook.client-id=791192462908060
+spring.security.oauth2.client.registration.facebook.client-secret=903077a87f95b16d025b284fc2193c81
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
