--- a/microservices/catalog-service/src/main/resources/application.properties
+++ b/microservices/catalog-service/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=catalog-service
 spring.config.import=optional:configserver:http://localhost:8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/user-service
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+#spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+
+spring.flyway.baseline-on-migrate=true
