--- a/microservices/catalog-service/pom.xml
+++ b/microservices/catalog-service/pom.xml
@@ -113,6 +113,15 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-hibernate-cache-v60</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-spring6-embedded</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
