--- a/microservices/catalog-service/src/main/resources/application.properties
+++ b/microservices/catalog-service/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 
 spring.flyway.baseline-on-migrate=true
+
+spring.cache.infinispan.config=classpath:infinispan.xml
