--- a/microservices/order-service/src/main/resources/application.properties
+++ b/microservices/order-service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=order-service
 spring.config.import=optional:configserver:http://localhost:8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
