--- a/microservices/catalog-service/src/main/resources/application.properties
+++ b/microservices/catalog-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=catalog-service
 spring.config.import=optional:configserver:http://localhost:8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/webshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/catalog-service
 spring.datasource.username=postgres
 spring.datasource.password=root
 
